--- a/css/news.css
+++ b/css/news.css
@@ -18,3 +18,13 @@
 .news_sect a{
 	margin: .2em auto;
 }
+
+
+
+section{
+	margin: 0 auto 1em;
+	border: .1em solid #ccc;
+}
+section:last-child{
+	margin-bottom: 0;
+}
