--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,7 @@
 *{
 	margin: 0;
 	padding: 0;
+	text-decoration: none;
 	box-sizing: border-box;
 }
 body{background: #f5f5f5;}
@@ -12,6 +13,8 @@ body{background: #f5f5f5;}
 .pointer{cursor: pointer;}
 .position_fixed{position: fixed;}
 .border_light_grey{border: .1em solid #f5f5f5;}
+.text_uppercase{text-transform: uppercase;}
+.text_capitalize{text-transform: capitalize;}
 .flex_middle{
 	display: flex;
 	align-items: center;
@@ -60,6 +63,11 @@ main .case_container span:last-child{
 	word-spacing: .2em;
 	letter-spacing: .1em;
 	text-transform: uppercase;
+}
+section{padding: .5em 1em;}
+section .section_title{
+	font-weight: bold;
+	text-align: center;
 }
 
 /**
