--- a/css/news.css
+++ b/css/news.css
@@ -1,30 +1,25 @@
 .news_sect{
-	margin: 0 auto .5em;
-	padding: .5em 1em;
-	border-bottom: .1em solid #ccc;
-}
-.news_sect:last-child{
-	border-bottom: 0;
-}
-.new_title{
-	color: #555;
-	font-weight: bold;
-	font-size: 1.1em;
-	text-transform: uppercase;
-}
-.new_intro{
-	color: #333;
-}
-.news_sect a{
-	margin: .2em auto;
-}
+	margin: auto;
+	/*padding: .5em;
+	border: .1em solid #ccc;
+*/}
 
-
-
-section{
-	margin: 0 auto 1em;
+.a_new{
+	padding: .5em;
+	margin: 0 auto .2em;
 	border: .1em solid #ccc;
 }
-section:last-child{
-	margin-bottom: 0;
+/*.new_body{
+}*/
+.new_body .new_title{
+	color: #333;
+	font-weight: bold;
+	font-size: 1.3em;
+}
+.new_body .new_excerpt{
+	color: #111;
+}
+.a_new button{
+	margin-top: .2em;
+	padding: .5em;
 }
