--- a/css/base.css
+++ b/css/base.css
@@ -1,80 +1,64 @@
 *{
 	margin: 0;
 	padding: 0;
+	list-style: none;
 	text-decoration: none;
 	box-sizing: border-box;
 }
 body{background: #f5f5f5;}
-.theme_bg{background: #38003c;}
 .full_w{width: 100%;}
 .full_h{height: 100%;}
-.full_dims{width: 100%;height: 100%;}
-.rounded{border-radius: 50%;}
+.full_dims{width: 100%; height: 100%;}
 .pointer{cursor: pointer;}
-.position_fixed{position: fixed;}
-.border_light_grey{border: .1em solid #f5f5f5;}
 .text_uppercase{text-transform: uppercase;}
-.text_capitalize{text-transform: capitalize;}
-.flex_middle{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-/**
-* custom styles
-*/
-/*HEADER*/
-header{
+.text_align_center{text-align: center;}
+.theme_bg{background: #38003c;}
+.sticky_top{
 	top: 0;
-	padding: .1em 0;
 	position: sticky;
 }
-header .app_icon{
-	width: 3em;
-	height: 3em;
-	overflow: hidden;
-	object-fit: contain;
+.flex_space_around{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
-#select_country{padding: 1em .2em;}
+/*CUSTOM STYLES*/
+header{padding: .8em .2em;}
+header .logo{
+	width: 2.5em;
+	height: 2.5em;
+}
 
-/*MAIN*/
-main{margin: 0 auto;}
-main .case_container{
-	display: flex;
-	margin: 0 auto .2em;
-	padding: 4em .2em;
-	animation: anim .4s;
-	flex-flow: column wrap;
+select{
+	padding: 1.5em .8em;
+	border: .1em solid #ccc;
+}
+
+main{
+	padding: .1em;
+	margin: 0 auto;
+}
+main>section{flex-direction: column;}
+main>section>div{
+	padding: 5em .5em;
+	flex-direction: column;
 	border-bottom: .1em solid #ccc;
 }
-main .case_container:last-child{border-bottom: none;}
-main .case_container span{text-align: center;}
-main .case_container span:first-child{
+main>section>div:last-child{border-bottom: 0;}
+.case_number{
 	color: #555;
 	font-size: .8em;
 }
-main .case_container span:last-child{
+.case_title{
 	color: #333;
 	font-size: .8em;
 	word-spacing: .2em;
 	letter-spacing: .1em;
-	text-transform: uppercase;
-}
-/*section{padding: 0 1em;}*/
-section .section_title{
-	font-weight: bold;
-	text-align: center;
 }
 
-/**
-* for wider screens
-*/
-@media(min-width: 1001px){main{width: 30%;}}
+/*MEDIA QUERIES*/
+@media(min-width: 1001px){main{width: 30%; padding: .1em 0;}}
 @media(min-width: 1200px){main{width: 25%;}}
 @media(min-width: 1400px){main{width: 20%;}}
 @media(min-width: 1500px){main{width: 15%;}}
-
-/*animations*/
-@keyframes anim{from{opacity: 0;}to{opacity: 1;}}
