--- a/css/base.css
+++ b/css/base.css
@@ -24,14 +24,14 @@ body{background: #f5f5f5;}
 }
 
 /*CUSTOM STYLES*/
-header{padding: .8em .2em;}
+header{padding: .5em .2em;}
 header .logo{
 	width: 2.5em;
 	height: 2.5em;
 }
 
 select{
-	padding: 1.5em .8em;
+	padding: .8em 1em;
 	border: .1em solid #ccc;
 }
 
@@ -48,11 +48,11 @@ main>section>div{
 main>section>div:last-child{border-bottom: 0;}
 .case_number{
 	color: #555;
-	font-size: .8em;
+	font-size: .8rem;
 }
 .case_title{
 	color: #333;
-	font-size: .8em;
+	font-size: .8rem;
 	word-spacing: .2em;
 	letter-spacing: .1em;
 }
